# celebral-valley

./: .gitignore  README.md
backend/: FRONTEND_README.md  README.md  SCRIPTS_README.md  app.py  clear_all_data.py  curl_commands.md  database.py  delete_all_rows.py  frontend.py  frontend_requirements.txt  initialize_system.py  llmapi.py  pyproject.toml  rag2.py  rag3.py  rag3_llampi_integration.py  requirements.txt  run.py  run_migration.py  setup_yashvika.sql  simple_test_collateral.py  start_frontend.sh  test_core_logic.py  test_refactored_integration.py  test_yashvika_e2e_flow.py
backend/crossmint/: crossmint.py
backend/dataModels/: __init__.py  account.py  borrower.py  collateral.py  transaction.py  user.py
backend/db/: __init__.py  account.py  collateral.py  transaction.py  user.py
backend/migrations/: 001_create_users.sql  002_create_accounts.sql  003_create_collaterals.sql  004_create_transactions.sql  005_add_organization_role.sql  007_add_account_balances.sql  008_add_wallet_id.sql  009_create_organization_account.sql
backend/routes/: accounts.py  collaterals.py  transactions.py  users.py
backend/services/: balance_service.py
backend/templates/: approve_collateral.html  create_collateral.html  index.html  list_collaterals.html
frontend/: App.js  Justfile  README.md  app.json  openapi-spec.yaml  openapi.json  package-lock.json  package.json
frontend/src/api/: apiClient.js
frontend/src/components/: AnimatedSplashScreen.js
frontend/src/data/: mockData.js
frontend/src/navigation/: BorrowStack.js
frontend/src/screens/: BorrowLoansScreen.js  InvestScreen.js  NewLoanFormScreen.js  ValuationResultScreen.js
frontend/src/types/: Loan.js
frontend/wireframes/: 01-main-tabs.txt  02-borrow-loans.txt  03-new-loan-form.txt  04-camera-screen.txt  05-valuation-result.txt  06-invest-tab.txt  07-loan-details.txt  README.md
