[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "lord-fourth0107",email = "shivamsinghnitr123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic (>=0.64.0,<0.65.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
