[tool.poetry]
name = "celebral-valley-backend"
version = "0.1.0"
description = "Backend API for Celebral Valley Hackathon"
authors = ["lord-fourth0107 <shivamsinghnitr123@gmail.com>"]
packages = [
    {include = "dataModels"},
    {include = "app.py"},
    {include = "llmapi.py"}
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
anthropic = "^0.64.0"
pydantic = "^2.11.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
