[tool.poetry]
name = "celebral-valley-backend"
version = "0.1.0"
description = "Backend API for Celebral Valley Hackathon"
authors = ["lord-fourth0107 <shivamsinghnitr123@gmail.com>"]
packages = [
    {include = "dataModels"},
    {include = "app.py"},
    {include = "llmapi.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
anthropic = "^0.64.0"
pydantic = "^2.11.7"
email-validator = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
psycopg-pool = "^3.2.1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
